# lemonlauncher

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  bootstrap  bootstrap.sh  changelog  configure.in  dictionary.c  dictionary.h  gamelist  gamelist.sql  games.conf  games.conf.sample  iniparser.h  keycodes.txt  lemonlauncher.conf  lemonlauncher.conf.sample  lemonlauncher.cpp  lemonlauncher.ini  lemonmenu.cpp  lemonmenu.h  log.cpp  log.h  menulist  misc.cpp  misc.h  options.cpp  options.h  skin.conf.sample  strlib.h  table.h  theme.conf.sample
lemontool/: config.py  lemontool  model.py
patches/: win32-restore.patch
src/: Makefile.am  error.h  game.cpp  game.h  item.h  layout.cpp  layout.h  lemonlauncher.cpp  lemonmenu.cpp  lemonmenu.h  lemonui.cpp  lemonui.h  log.cpp  log.h  menu.cpp  menu.h  options.cpp  options.h
